--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,9 @@
                  android:label="@string/app_name"
                  android:theme="@style/TextSecure.LightTheme">
 
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity android:name=".RoutingActivity"
                   android:theme="@style/NoAnimation.Theme.Sherlock.Light.DarkActionBar"            
                   android:launchMode="singleTask"
